apps/medium-place/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: medium-place
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.59.1
spec:
  selector:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: synapse
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: http
